--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 <body>
     <header>
         <!--Header-->
-        <div>
-            <a href="">Web<span>Studio</span></a>
-        </div>
+        <a href="">Web<span>Studio</span></a>
         <nav>
             <ul>
                 <li><a href="">Студия</a></li>
@@ -38,19 +36,19 @@
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
-                    <li>Идейные соображения, а также начало повседневной работы по формированию позиции.</li>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                     <h3>Пунктуальность</h3>
-                    <li>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</li>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
                     <h3>Планирование</h3>
-                    <li>Равным образом консультация с широким активом в значительной степени обуславливает.</li>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
                     <h3>Современные технологии</h3>
-                    <li>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</li>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
@@ -58,9 +56,9 @@
         <section>
                 <h2>Чем мы занимаемся</h2>
                 <ul>
-                    <li><img src="imgs/box 1.png" alt="Рабочее c клавиатурой" width="370px"></li>
-                    <li><img src="imgs/box 2.png" alt="Рабочее лептопом" width="370px"></li>
-                    <li><img src="imgs/box 3.png" alt="Рабочее с планшетом" width="370px"></li>
+                    <li><img src="imgs/box1.jpg" alt="Рабочее c клавиатурой" width="370"></li>
+                    <li><img src="imgs/box2.jpg" alt="Рабочее лептопом" width="370"></li>
+                    <li><img src="imgs/box3.jpg" alt="Рабочее с планшетом" width="370"></li>
                 </ul>
         </section>
         <!--Our-Team-->
@@ -69,25 +67,25 @@
             <!--Igor-->
             <ul>
                 <li>
-                    <img src="imgs/img (4).jpg" width="270" alt="Фото пользователя">
+                    <img src="imgs/igor.jpg" width="270" alt="Фото пользователя">
                     <span>Игорь Демьяненко</span>
                     <p>Product Designer</p>
                 </li>
             <!--Olha-->
                 <li>
-                    <img src="imgs/img (5).jpg" width="270" alt="Фото пользователя">
+                    <img src="imgs/olga.jpg" width="270" alt="Фото пользователя">
                     <span>Ольга Репина</span>
                     <p>Frontend Developer</p>
                 </li>
             <!--Mukhola-->
                 <li>
-                    <img src="imgs/img (6).jpg" width="270" alt="Фото пользователя">
+                    <img src="imgs/nikolai.jpg" width="270" alt="Фото пользователя">
                     <span>Николай Тарасов</span>
                     <p>Marketing</p>
                 </li>
             <!--Mikhailo-->
                 <li>
-                    <img src="imgs/img (7).jpg" width="270" alt="Фото пользователя">
+                    <img src="imgs/mikhail.jpg" width="270" alt="Фото пользователя">
                     <span>Михаил Ермаков</span>
                     <p>UI Designer</p>
                 </li>
@@ -99,8 +97,6 @@
         <a href="">Web<span>Studio</span></a>
         <address>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
-        </address>
-        <address>
             <a href="mailto:info@example.com">info@example.com</a>
             <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
         </address>
