--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section>
             <!--Head-->
             <h1>Эффективные решения <br /> для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button> 
+            <button type="button">Заказать услуги</button> 
         </section>
         <section>
             <!--Specialisation-->
